--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -23,7 +23,12 @@
 <!--/ Toolbar-->
 
 <!--    Main Content-->
-    <include layout="@layout/content_main" />
+<!--    <include layout="@layout/content_main" />-->
+    <FrameLayout
+        android:id="@+id/flContent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize"/>
 <!--    / Main Content-->
 
 <!--    Email Floating Button-->
