--- a/app/src/main/res/layout/fragment_goal_edit.xml
+++ b/app/src/main/res/layout/fragment_goal_edit.xml
@@ -42,18 +42,22 @@
                 android:layout_marginTop="24dp">
 
                 <TextView
-                    android:id="@+id/textViewCurrentWeight"
+                    android:id="@+id/textViewEditCurrentWeight"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:textSize="17sp"
+                    android:paddingTop="10dp"
                     android:layout_marginEnd="10dp"
                     android:text="@string/current_weight" />
 
-                <TextView
-                    android:id="@+id/textViewCurrentWeight_1"
+                <EditText
+                    android:id="@+id/editTextEditCurrentWeight"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="4dp"
-                    android:text="" />
+                    android:ems="3"
+                    android:hint="@string/in_kgs"
+                    android:inputType="number"
+                    android:autofillHints="Weight" />
 
 
             </TableRow>
@@ -69,14 +73,18 @@
                     android:id="@+id/textViewTargetWeight"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textSize="17sp"
+                    android:paddingTop="10dp"
                     android:text="@string/target_weight"/>
 
-                <TextView
-                    android:id="@+id/textViewTargetWeight_1"
+                <EditText
+                    android:id="@+id/editTextEditTargetWeight"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="4dp"
-                    android:text="" />
+                    android:ems="3"
+                    android:hint="@string/in_kgs"
+                    android:inputType="number"
+                    android:autofillHints="Weight" />
 
             </TableRow>
             <!--Target Weight-->
@@ -88,20 +96,50 @@
                 android:layout_marginTop="24dp">
 
                 <TextView
-                    android:id="@+id/textViewMethod"
+                    android:id="@+id/textViewGoalChoice"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/method" />
+                    android:textSize="15sp"
+                    android:paddingTop="10dp"
+                    android:text="@string/i_want_to" />
 
-                <TextView
-                    android:id="@+id/textViewMethod_1"
+                <Spinner
+                    android:id="@+id/spinnerEditIWantTo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="4dp"
-                    android:text="" />
+                    android:layout_marginStart="5dp"
+                    android:entries="@array/weekly_goal" />
 
             </TableRow>
             <!--Method-->
+
+            <!--Weekly Goal-->
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="18dp">
+
+                <TextView
+                    android:id="@+id/textViewWeeklyGoal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="15sp"
+                    android:paddingTop="10dp"
+                    android:text="@string/weekly_goal" />
+
+                <Spinner
+                    android:id="@+id/spinnerEditWeeklyGoal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:entries="@array/weekly_goal_kg" />
+
+                <TextView
+                    android:id="@+id/textViewKgPerWeek"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/kg_per_week" />
+            </TableRow>
+            <!--Weekly Goal-->
 
             <!--Activity level-->
             <TableRow
@@ -113,44 +151,32 @@
                     android:id="@+id/textViewActivityLevel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textSize="17sp"
+                    android:paddingTop="10dp"
                     android:text="@string/activity_level" />
 
-                <TextView
-                    android:id="@+id/textViewActivityLevel_1"
-                    android:layout_width="wrap_content"
+                <Spinner
+                    android:id="@+id/spinnerEditActivityLevel"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="" />
+                    android:entries="@array/activity_level" />
 
             </TableRow>
             <!--Activity level-->
 
-            <!--Energy Goals-->
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="34dp">
-
-                <TextView
-                    android:id="@+id/textViewEnergyGoals"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/you_need_to_consume"
-                    android:textSize="17sp"
-                    android:layout_marginEnd="3dp"/>
-
-                <TextView
-                    android:id="@+id/textViewEnergyGoals_1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="17sp"
-                    android:text="" />
-
-            </TableRow>
-            <!--Energy Goals-->
-
         </TableLayout>
 
-        <!-- Name Label -->
+        <!--Save Button-->
+        <Button
+            android:id="@+id/buttonGoalSave"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/save"
+            android:layout_marginTop="20dp"
+            android:layout_gravity="center"
+            android:textAlignment="center"
+            android:textSize="20sp" />
+        <!--Save Button-->
 
     </LinearLayout>
 </ScrollView>
