--- a/app/src/main/res/layout/fragment_add_food_to_diary_view_food.xml
+++ b/app/src/main/res/layout/fragment_add_food_to_diary_view_food.xml
@@ -91,40 +91,57 @@
                     android:id="@+id/textViewFoodCalorie"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="5dp"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="calories" />
+
+                <TextView
+                    android:id="@+id/textViewLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:text="per serving/100 gm" />
 
             </TableRow>
             <!--Calorie-->
 
-            <!--Serving Size pcs-->
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="24dp">
+<!--            &lt;!&ndash;Serving Size pcs&ndash;&gt;-->
+<!--            <TableRow-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:layout_marginTop="24dp">-->
 
-                <TextView
-                    android:id="@+id/textViewServingSizePcs"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="15dp"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="@string/serving_in_pcs" />
+<!--                <TextView-->
+<!--                    android:id="@+id/textViewServingSizePcs"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginEnd="15dp"-->
+<!--                    android:textAppearance="?android:attr/textAppearanceMedium"-->
+<!--                    android:text="@string/serving_in" />-->
 
-                <EditText
-                    android:id="@+id/editTextServingSizePcs"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="number"
-                    android:text="" />
+<!--                <EditText-->
+<!--                    android:id="@+id/editTextServingSizePcs"-->
+<!--                    android:layout_width="fill_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:inputType="numberDecimal"-->
+<!--                    android:text="" />-->
 
-            </TableRow>
-            <!--Serving Size pcs-->
+<!--                <TextView-->
+<!--                    android:id="@+id/textViewPcs"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginStart="5dp"-->
+<!--                    android:textAppearance="?android:attr/textAppearanceMedium"-->
+<!--                    android:text="@string/pcs" />-->
+
+<!--            </TableRow>-->
+<!--            &lt;!&ndash;Serving Size pcs&ndash;&gt;-->
 
             <!--Serving Size gram-->
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_marginTop="24dp">
 
                 <TextView
                     android:id="@+id/textViewServingSizeGram"
@@ -132,14 +149,22 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="15dp"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="@string/serving_in_gram" />
+                    android:text="@string/serving_in" />
 
                 <EditText
                     android:id="@+id/editTextServingSizeGram"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="number"
+                    android:inputType="numberDecimal"
                     android:text="" />
+
+                <TextView
+                    android:id="@+id/textViewGram"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="@string/gram" />
 
             </TableRow>
             <!--Serving Size gram-->
